# IME

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
scripts/: register.ps1  unregister.ps1
service/: CMakeLists.txt
service/src/engine/: onnxEngine.hpp
src/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  DllMain.cpp  Globals.h  Register.cpp  Register.h  TextService.cpp  TextService.h  bopomofo.h  ime.def
tsf/: CMakeLists.txt
tsf/src/: dllmain.cpp
tsf/src/core/: bopomofo.hpp  bopomofoBuffer.hpp  buffer.hpp
tsf/src/engine/impl/: llamaEngine.hpp
tsf/src/system/: classFactory.hpp  globals.h  register.hpp
tsf/src/tsf/: candidateListUI.hpp  candidateUiController.cpp  candidateUiController.hpp  editSession.hpp  textService.cpp  textService.h
tsf/src/ui/: candidateWindow.hpp
tsf/src/utils/: debugSink.hpp
